# agent-forge

./: .gitignore  AGENTS.md  README.md  eval.py  install.sh  pyproject.toml
.claude/skills/agent-forge-eval/: SKILL.md
.claude/skills/agent-forge-eval/assets/: agent-flow-post-ddd.json  agent-flow-pre-ddd.json  baseline-schema.json  claude-cli.json  raw-metrics.json
.claude/skills/agent-forge-eval/references/: baselines.md  tasks.md
.claude/skills/agent-forge-wiki/: SKILL.md
.claude/skills/agent-forge-wiki/tests/: conftest.py  test_builtin_code_markers.py  test_builtin_git_history.py  test_cli.py  (+13 more)
agent_forge/: __init__.py  _subprocess.py  anthropic_provider.py  autonomous.py  chat.py  context.py  events.py  guards.py  hooks.py  loop.py  mcp.py  messages.py  models.py  prompts.py  provider.py  renderer.py  runner.py  runtime.py  session.py  system_prompt.py  tools.py
agent_forge/wiki/: __init__.py  _llm.py  types.py
agent_forge/wiki/compact/: runner.py
agent_forge/wiki/compile/: __init__.py  runner.py
agent_forge/wiki/gather/: __init__.py  cli.py  discovery.py
agent_forge/wiki/maintain/: runner.py
agent_forge/wiki/metrics/: __init__.py
agent_forge/wiki/present/: runner.py
agent_forge/wiki/ratchet/: __init__.py  bundle.py  runner.py
docs/: CHANGELOG.md  README.md
docs/adr/: ADR-001-agent-runtime.md  ADR-002-provider-as-protocol.md  ADR-003-cache-control-is-a-hint.md  ADR-005-wiki-extracted-as-skill.md
docs/user/: configuration.md  faq.md  getting-started.md  mcp.md  team-setup.md
eval/: README.md  aggregate.py  code_metrics.py  code_metrics_kt.py  harness.sh  kotlin_sweep.sh  medium_sweep.sh  parse_run.py  post_refactor_sweep.sh  rescan.py  run_matrix.sh  system_prompt_size.py
eval/tasks/jetpack_compose_notes/: README.md  TASK.md  architecture_check.py
eval/tasks/rate_limiter/: TASK.md  hidden_tests.py
scripts/: build_api_docs.sh
tests/: fake_mcp_server.py  fake_provider.py  test_agent_loop.py  test_autonomous.py  test_context.py  test_hooks.py  test_mcp_config.py  test_mcp_core.py  test_mcp_prompts.py  test_phase6.py  test_prompts.py  test_renderer.py  test_runner.py  test_runtime.py  test_sanitize_and_audit.py  test_secrets_redaction.py  test_session.py  test_session_roundtrip.py  test_tools.py
tests/wiki/: test_builtin_code_markers.py  test_builtin_git_history.py  test_builtin_hotspots.py  test_builtin_notes.py  test_builtin_prs.py  test_builtin_repo_files.py  test_cli.py  test_compact.py  test_compile.py  test_discovery.py  test_maintain.py  test_metrics.py  test_noise.py  test_present.py  test_ratchet.py  test_storage.py  test_types.py
(+34 files in other folders)
