[project]
name = "agent-forge"
version = "1.0.0"
description = "Minimal coding agent — 7 flat modules"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "prompt-toolkit>=3.0",
    "rich>=13.0",
]

[project.scripts]
agent-forge = "agent_forge.chat:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["."]
